istio/server.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: grpc-server-go
  labels:
    app: grpc-server-go
    service: grpc-server-go
spec:
  ports:
    - port: 80
      targetPort: 1234
      name: grpc
  selector:
    app: grpc-server-go
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: grpc-server-go-v1
  labels:
    app: grpc-server-go
    version: v1
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: grpc-server-go
        version: v1
    spec:
      containers:
        - name: grpc-server-go
          image: zcong/istio-grpc-demo-go:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 1234
